Tue May 19 17:15:03 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/benchmark.rb: Update Benchmark documentation and formatting.
	  [fix GH-903][ci skip]

Tue May 19 13:10:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_positive_p): should false on Bignum 0.
	  http://twitter.com/rafaelfranca/status/600509783427391488
	  [ruby-core:69173] [Feature #11151]

Tue May 19 11:22:28 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc2396_parser.rb (initialize_pattern):
	  URI::Generic.build should accept port as a string.
	  pattern[:PORT] is not defined for long.
	  by Dave Slutzkin <daveslutzkin@fastmail.fm>
	  https://github.com/ruby/ruby/pull/804 fix GH-804

Tue May 19 11:18:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_data_typed_object_alloc),
	  (rb_data_object_alloc): add old names for source level backward
	  compatibilities.

	* gc.c (rb_data_object_alloc, rb_data_typed_object_alloc): add
	  aliases for binary level backward compatibilities.

Tue May 19 09:54:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (Data_Make_Struct0): needs function pointer
	  casts to fix function overloading in C++.

Tue May 19 09:43:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (Data_Make_Struct0, TypedData_Make_Struct0):
	  explicit cast from void* is necessary as implicit cast is
	  disallowed in C++.

Mon May 18 15:31:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_f_notimplement): should not respond to
	  not-implemented methods.  as the address inside a DLL and the
	  imported address are different on Windows, use an exported
	  variable to share the same address.

Mon May 18 13:55:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb (mon_try_enter, mon_enter): should reset @mon_count
	  just in case the previous owner thread dies without mon_exit.
	  [fix GH-874] Patch by @chrisberkhout
